# share-stars

./: .env  .gitignore  .tool.env  Cargo.toml  README.md  docker-compose.ym  docker-compose.yml  study-openapi.yml
.sqlx/: query-cd65f948070290efe5a12b568b9f20247db60aec44e8cab092ef84c5eb2d0e83.json  query-d0483027dfbf4234295e4ab42316914e6d8df2f8ef2d06da7ed43600921a2123.json
config/: application.toml  application_dev.toml  private_key1.pem  private_key2.pem  public_key1.pem  public_key2.pem
crates/biz-http/: Cargo.toml
crates/biz-http/src/: handler.rs  intercepter.rs  lib.rs  main.rs  vo.rs
crates/biz-http/src/handler/: login.rs
crates/biz-http/src/vo/: login.rs
crates/biz-manager/: Cargo.toml
crates/biz-store/: Cargo.toml
crates/lib-auth/src/: extract.rs  interceptor.rs  lib.rs  vo.rs
crates/lib-auth/src/handler/: login.rs
crates/lib-core/: Cargo.toml
crates/lib-core/migrations/: 20250414155624_users.down.sql  20250414155624_users.up.sql
crates/lib-core/src/: db.rs  dtos.rs  lib.rs
crates/lib-utils/: Cargo.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: interceptor.rs  lib.rs  models.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: db.rs  dtos.rs  lib.rs
crates/libs/lib-core/src/db/: models.rs  repositories.rs  services.rs
crates/libs/lib-core/src/db/models/: account.rs  device.rs  passport.rs  phone_mapping.rs  trusted_device.rs
crates/libs/lib-core/src/db/repositories/: account_identity_repository.rs  account_identity_repository_impl.rs  account_repository.rs  account_repository_impl.rs  lookup_account_repository.rs  lookup_account_repository_impl.rs  passport_repository.rs  passport_repository_impl.rs  phone_mapping_repository.rs  phone_mapping_repository_impl.rs
crates/libs/lib-core/src/db/services/: account_service.rs  passport_service.rs
crates/libs/lib-macro/: Cargo.toml
crates/libs/lib-macro-derive/: Cargo.toml
crates/libs/lib-macro-derive/src/: enum_ext.rs  lib.rs
crates/libs/lib-macro/src/: lib.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: id_generator.rs  lib.rs  path_ext.rs  phone_ext.rs  rand_utils.rs  str_ext.rs
crates/services/web-server/: .env  Cargo.toml
crates/services/web-server/config/: application.toml
crates/services/web-server/src/: biz.rs  config.rs  http.rs  main.rs
crates/services/web-server/src/biz/: authn.rs  device.rs  dto.rs  login.rs  security.rs  session.rs  sms.rs  two_factor.rs  verify.rs
crates/services/web-server/src/biz/authn/: base_login.rs  login_by_password.rs  login_by_sms.rs
crates/services/web-server/src/biz/device/: device.rs  trust_device.rs
crates/services/web-server/src/biz/dto/: biz_enum.rs  biz_models.rs
crates/services/web-server/src/biz/login/: base_login.rs  by_password.rs  login_by_password.rs
crates/services/web-server/src/biz/security/: password_statistic.rs  security_device.rs  sms_statistic.rs  trust_device.rs
crates/services/web-server/src/biz/session/: gen_token.rs  jwt_manager.rs  token.rs  token_service.rs
crates/services/web-server/src/biz/sms/: code.rs  sms_send.rs
crates/services/web-server/src/biz/two_factor/: sms_code.rs  sms_send.rs
crates/services/web-server/src/biz/verify/: code.rs  sms_send.rs
crates/services/web-server/src/http/: common.rs  extract.rs  handler.rs  middleware.rs  mw.rs  router.rs  vo.rs
crates/services/web-server/src/http/extract/: body.rs  header.rs
crates/services/web-server/src/http/handler/: index.rs  login.rs  profile.rs  register.rs  sms.rs  test.rs
crates/services/web-server/src/http/middleware/: body.rs  header.rs  mw_token_interceptor.rs
crates/services/web-server/src/http/mw/: mw_device.rs  mw_token_interceptor.rs
crates/services/web-server/src/http/router/: login.rs  profile.rs  register.rs
crates/services/web-server/src/http/vo/: error.rs  login.rs  register.rs  result.rs  sms.rs
crates/tools/tool-box/: .env  Cargo.toml
crates/tools/tool-box/src/: lib.rs  main.rs  model.rs  pg_meta.rs
crates/web-server/: .env  Cargo.toml
crates/web-server/src/: config.rs  extract.rs  handler.rs  main.rs  router.rs  vo.rs
crates/web-server/src/config/: app.rs  router.rs
crates/web-server/src/extract/: body.rs  header.rs
crates/web-server/src/handler/: index.rs  login.rs
crates/web-server/src/router/: login.rs  profile.rs  root.rs
crates/web-server/src/vo/: error.rs  login.rs
doc/: users.sql
migrations/: 20250414155624_users.down.sql  20250414155624_users.up.sql  20250423144345_passport.down.sql  20250423144345_passport.up.sql  20250610162845_trust_device.down.sql  20250610162845_trust_device.up.sql  20250709141453_account.down.sql  20250709141453_account.up.sql
