[workspace]
members = ["crates/libs/*", "crates/services/*", "crates/tools/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["yaolei313@gmail.com"]

[workspace.dependencies]
# local crates
lib-utils = { path = "crates/libs/lib-utils", version = "0.0.0" }
lib-core = { path = "crates/libs/lib-core", version = "0.0.0" }
lib-macro = { path = "crates/libs/lib-macro", version = "0.0.0" }
lib-macro-derive = { path = "crates/libs/lib-macro-derive", version = "0.0.0" }
# other crates
anyhow = "1.0.79"
axum = { version = "0.8.4", features = ["macros", "http2"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
features = "0.10.0"
headers = "0.4.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.5.2", features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
    "steer",
    "filter",
] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "serde_json"] }
uuid = { version = "1.16.0", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
log = "0.4"
clap = { version = "4.5.26", features = ["derive", "env"] }
phf = { version = "0.11.3", features = ["macros"] }
thiserror = { version = "2.0.11" }