[package]
name = "biz-http"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
features = "0.10.0"
headers = "0.4.0"
runtime-tokio = "0.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sqlx = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
    "steer",
    "filter",
] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
