[package]
name = "web-server"
edition.workspace = true
version.workspace = true
authors.workspace = true


[dependencies]
lib-auth.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
dotenv.workspace = true
features.workspace = true
headers.workspace = true
jsonwebtoken.workspace = true
runtime-tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
