[package]
name = "lib-utils"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
phonenumber.workspace = true
regex.workspace = true
dirs.workspace = true
sonyflake.workspace = true
rs-snowflake.workspace = true
rand.workspace = true