[package]
name = "web-server"
edition.workspace = true
version.workspace = true
authors.workspace = true


[dependencies]
lib-core.workspace = true
lib-utils.workspace = true
lib-macro-derive.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
dotenv.workspace = true
features.workspace = true
headers.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
log.workspace = true
thiserror.workspace = true
client-ip.workspace = true
phonenumber.workspace = true
sha2.workspace = true
hex.workspace = true
config.workspace = true
