[package]
name = "tool-box"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
sqlx.workspace = true
tokio.workspace = true
dotenv.workspace = true
lib-utils.workspace = true
phf.workspace = true
rsa.workspace = true
rand.workspace = true
pkcs8.workspace = true
jsonwebtoken.workspace = true
base64 = "0.22.1"
serde_json = "1.0.140"
